--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <allure.version>1.5.2</allure.version>
-        <aspectj.version>1.9.6</aspectj.version>
+        <aspectj.version>1.8.9</aspectj.version>
         <compiler.version>1.8</compiler.version>
         <selenium.version>3.141.59</selenium.version>
     </properties>
@@ -53,7 +53,7 @@
                     <properties>
                         <property>
                             <name>listener</name>
-                            <value>my.company.util.AllureListener</value>
+                            <value>util.AllureListener</value>
                         </property>
                     </properties>
                 </configuration>
@@ -73,13 +73,13 @@
                 </executions>
             </plugin>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
